<resources>
    <!--  App  -->
    <string name="app_name">MyMeds</string>
    <string name="owner">Sahan Sachintha</string>
    <string name="logo">App Logo</string>
    <string name="menu">Menu</string>

    <string name="google_maps_key" translatable="false">AIzaSyAB2gzXQk_8nWWfOMhSHgiKEV3Q2h4uk4w</string>

    <!--  Menu  -->
    <string name="title_home">Home</string>
    <string name="title_reminders">Reminders</string>
    <string name="title_medications">Medications</string>
    <string name="title_profile">Profile</string>
    <string name="title_setting">Settings</string>
    <string name="title_logout">Logout</string>
    <string name="title_store">Store</string>
    <string name="title_shop">Shop</string>
    <string name="title_cart">Cart</string>
    <string name="title_orders">Orders</string>

    <!--  Navigation Drawer  -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--  Major Activities  -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="title_activity_store">StoreActivity</string>

    <!--  Auth Activity  -->
    <string name="title_login">Login</string>
    <string name="title_signup">Sign Up</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_forgot_password">Forgot Password?</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--  Splash Activity  -->
    <string name="welcome">"Welcome !"</string>
    <string name="welcome_to">"Welcome to"</string>

    <!--  Fragments  -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  Home  -->
    <string name="search_home">Search for a item</string>

    <string name="categories">Categories</string>
    <string name="my_reminders">My Reminders</string>
    <string name="my_medications">My Medications</string>

    <!--  Alarm  -->
    <string name="reminder_15s">Reminder 15s</string>
    <string name="reminder_30s">Reminder 30s</string>
    <string name="reminder_1m">Reminder 1min</string>
    <string name="reminder_2m">Reminder 2min</string>
    <string name="reminder_5m">Reminder 5min</string>
    <string name="reminder_10m">Reminder 10min</string>
    <string name="medication_reminder">Medication Reminder!</string>
    <string name="confirm">Confirm</string>
    <string name="snooze">Snooze</string>
    <string name="snooze_10_min">Snooze  (10 min)</string>
    <string name="min_10">(10 min)</string>

    <!--  Product View  -->
    <string name="decrement">Decrement</string>
    <string name="increment">Increment</string>
    <string name="price">Price</string>
    <string name="buy_now">Buy Now</string>
    <string name="_1">1</string>
    <string name="dosage">Dosage</string>
    <string name="product_title">Product Title</string>
    <string name="product_description">Product Description</string>
    <string name="description">Description</string>
    <string name="similar_products">Similar Products</string>
    <string name="back">Back</string>
    <string name="product">Product</string>
    <string name="checkout">Checkout</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="total_price">Total Price</string>
    <string name="_0">0</string>
    <string name="empty_cart">Your Cart is Empty</string>
    <string name="total_price_">Total Price:</string>
    <string name="total">Total:</string>
    <string name="category">Category</string>
    <string name="title">Title</string>
    <string name="pay_with_payhere">Pay with PayHere</string>
    <string name="view_all">View All</string>
    <string name="no_reminders">No Reminders</string>
    <string name="no_medications">No Medications</string>
    <string name="prodcuts">Prodcuts</string>
    <string name="refresh">Refresh</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="mobile">Mobile</string>
    <string name="prescription_optional">Prescription (Optional)</string>
    <string name="prescription">Prescription</string>
    <string name="personal_info">Personal Info</string>
    <string name="sahan">Sahan</string>
    <string name="owner_mobile">0768701148</string>
    <string name="map">Map</string>
    <string name="your_order_is_confirmed">Your Order is Confirmed</string>
    <string name="order_id_">Order ID:</string>
    <string name="order_id">Order ID</string>
    <string name="view_orders">View Orders</string>
    <string name="delivery">Delivery</string>
    <string name="delivery_">Delivery:</string>
    <string name="subtotal_">Subtotal:</string>
    <string name="subtotal">Subtotal</string>
    <string name="empty_orders">You have no Orders</string>
    <string name="order">Order</string>
    <string name="order_placed_on_">Order Placed On:</string>
    <string name="status_">Status:</string>
    <string name="customer_">Customer:</string>
    <string name="order_details">Order Details</string>
    <string name="order_complete">Order Complete</string>
    <string name="cancel">Cancel</string>
    <string name="time">Time</string>
    <string name="repeat_count">Repeat Count</string>
    <string name="date">Date</string>
    <string name="new_reminder">New Reminder</string>
    <string name="end_date">End Date</string>
    <string name="end_date_">End Date:</string>
    <string name="new_medication">New Medication</string>
    <string name="name">Name</string>
    <string name="dosage_ex">Dosage (ex: 500mg, 1pc)</string>
    <string name="instructions">Instructions</string>
    <string name="frequency">Frequency</string>
    <string name="frequency_ex">Frequency (ex: Once a Day, Twice a Day)</string>
    <string name="instructions_ex">Instructions (ex: After Eating, Before Eating)</string>
    <string name="status">Status</string>
    <string name="status_ex">Status (ex: Active/Inactive)</string>
    <string name="image_optional">Image (Optional)</string>
    <string name="location">Location</string>
    <string name="location_optional">Location (Optional)</string>
    <string name="select_location">Select Location</string>
    <string name="no_products_found">No Products Found</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="today">Today</string>
</resources>