<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_home"
            android:icon="@drawable/ic_home"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_item_reminders"
            android:icon="@drawable/ic_reminder"
            android:title="@string/title_reminders" />
        <item
            android:id="@+id/nav_item_medications"
            android:icon="@drawable/ic_medicine"
            android:title="@string/title_medications" />
        <item
            android:id="@+id/nav_item_store"
            android:icon="@drawable/ic_shop"
            android:title="@string/title_store" />
        <item
            android:id="@+id/nav_item_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/title_cart" />
        <item
            android:id="@+id/nav_item_orders"
            android:icon="@drawable/ic_orders"
            android:title="@string/title_orders" />
        <item
            android:id="@+id/nav_item_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/title_profile" />
        <item
            android:id="@+id/nav_item_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/title_setting" />
        <item
            android:id="@+id/nav_item_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/title_logout" />
    </group>
</menu>