<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.store.OrderViewActivity">

    <!--  Toolbar  -->
    <ImageView
        android:id="@+id/order_view_back_btn"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/textView40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView40"
        app:tint="?attr/colorNeutral800" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:text="@string/order_details"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/order_view_back_btn"
        app:layout_constraintTop_toTopOf="parent" />
    <!--  Toolbar  -->

    <!--  Address  -->
    <ImageView
        android:id="@+id/imageView40"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/map"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:srcCompat="@drawable/ic_gmap" />

    <TextView
        android:id="@+id/order_view_customer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sahan"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/order_view_address"
        app:layout_constraintEnd_toStartOf="@+id/order_view_customer_mobile"
        app:layout_constraintStart_toEndOf="@+id/imageView40"
        app:layout_constraintTop_toTopOf="@+id/imageView40" />

    <TextView
        android:id="@+id/order_view_customer_mobile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/owner_mobile"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/order_view_address"
        app:layout_constraintBottom_toBottomOf="@+id/order_view_customer_name"
        app:layout_constraintStart_toEndOf="@+id/order_view_customer_name"
        app:layout_constraintTop_toTopOf="@+id/order_view_customer_name" />

    <TextView
        android:id="@+id/order_view_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:maxLines="2"
        android:text="@string/address"
        app:layout_constraintBottom_toBottomOf="@+id/imageView40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/order_view_customer_name"
        app:layout_constraintTop_toBottomOf="@+id/order_view_customer_name" />
    <!--  Address  -->

    <Space
        android:id="@+id/space6"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_marginTop="8dp"
        android:background="?attr/colorCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView40" />

    <!--  Items  -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/order_view_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/space7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView40"
        app:layout_constraintTop_toBottomOf="@+id/space6" />

    <Space
        android:id="@+id/space7"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/colorCard"
        app:layout_constraintBottom_toTopOf="@+id/textView41"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />
    <!--  Items  -->

    <!--  Prescription  -->
    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/prescription_optional"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/order_view_prescription"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/order_view_prescription"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/prescription"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/space8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_medication" />
    <!--  Prescription  -->

    <Space
        android:id="@+id/space8"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/colorCard"
        app:layout_constraintBottom_toTopOf="@+id/textView45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/total"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/order_view_continue_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/order_view_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView43"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView43"
        tools:text="600 LKR" />

    <Button
        android:id="@+id/order_view_continue_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="?attr/colorNeutral800"
        android:text="@string/continue_shopping"
        android:textColor="?attr/colorNeutral100"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/delivery_"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView43"
        app:layout_constraintStart_toStartOf="@+id/textView43" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtotal_"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView44"
        app:layout_constraintStart_toStartOf="@+id/textView44" />

    <TextView
        android:id="@+id/order_view_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView44"
        app:layout_constraintEnd_toEndOf="@+id/order_view_total"
        app:layout_constraintTop_toTopOf="@+id/textView44"
        tools:text="200 LKR" />

    <TextView
        android:id="@+id/order_view_subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView45"
        app:layout_constraintEnd_toEndOf="@+id/order_view_delivery"
        app:layout_constraintTop_toTopOf="@+id/textView45"
        tools:text="400 LKR" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:text="@string/customer_"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/order_id_"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView40" />

    <TextView
        android:id="@+id/order_view_order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        tools:text="1023920319203" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/order_placed_on_"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/order_view_order_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/textView14"
        tools:text="2025-01-23 10:21:13" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/status_"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/order_view_order_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="?attr/colorSuccess"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView16"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="@+id/textView16"
        tools:text="Paid" />

</androidx.constraintlayout.widget.ConstraintLayout>