<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/alarm_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundShape"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="50dp"
    android:paddingVertical="20dp">

    <TextView
        android:id="@+id/alarm_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/medication_reminder"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/alarm_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:textSize="60sp"
        android:textStyle="bold"
        tools:text="TIME" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/background_selected"
            android:text="@string/confirm"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_snooze"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_snooze"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="27dp"
            android:background="@drawable/background_unselected"
            android:text="@string/snooze_10_min"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_confirm"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
